# deepspeed-mate

./: .pre-commit-config.yaml  pyproject.toml
scripts/: dumb.py
setup/: env.sh
src/: bang.py  wiz.py
src/train/: __main__.py
